--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=7.0000" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Zhixin Ma">
-    <meta name="keywords" content="Zhixin Ma">
-    <title>Zhixin Ma's Homepage</title>
+    <meta name="description" content="Hu Changshuo">
+    <meta name="keywords" content="Hu Changshuo">
+    <title>Hu Changshuo's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./files/style.css">
     <style>@-moz-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-webkit-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-o-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}embed,object{animation-duration:.001s;-ms-animation-duration:.001s;-moz-animation-duration:.001s;-webkit-animation-duration:.001s;-o-animation-duration:.001s;animation-name:nodeInserted;-ms-animation-name:nodeInserted;-moz-animation-name:nodeInserted;-webkit-animation-name:nodeInserted;-o-animation-name:nodeInserted;}</style>
 
@@ -89,7 +89,7 @@
 
                 <td valign="CENTER" align="left" size="+0">
                     <font size="+0">
-                        <b size="+2" style="font-size:25px">Zhixin Ma&nbsp;</b>
+                        <b size="+2" style="font-size:25px">Hu Changshuo&nbsp;</b>
                         <p style="margin-left:0px;">
                         </p>
 
@@ -338,22 +338,7 @@
         <h2 style="CLEAR: both">Honors <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
-                <td><span class="title">SMU Presidential Doctoral Fellowship </span>, AY2023 </td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">Dean’s List of School of Computing and Information Systems (SCIS)</span>, AY2023</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2023</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">ACM Multimedia Top Rated Paper Award</span>, AY2022</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">ACM Multimedia Student Travel Grant</span>, AY2022</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2021</td>
+                <td><span class="title">PhD Full Scholarship, Ministry of Education, Singapore </span>, 2023 </td>
             </tr> </tbody>
 
 
