--- a/index.html
+++ b/index.html
@@ -149,127 +149,9 @@
             </tbody>
         </table>
 
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://link.springer.com/article/10.1007/s00530-023-01143-5">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Interactive Video Retrieval in the Age of Effective Joint Embedding Deep Models</span>
-                    <br/>Jakub Lokoč, Stelios Andreadis, Werner Bailer, ..., <b>Zhixin Ma</b>, ..., Stefanos Vrochidis
-<!--                    <br/>Jakub Lokoč, Stelios Andreadis, Werner Bailer, Aaron Duane, Cathal Gurrin, <b>Zhixin Ma</b>, Nicola Messina,-->
-<!--                    <br/>Thao-Nhu Nguyen, Ladislav Peška, Luca Rossetto, Loris Sauter, Konstantin Schall, Klaus Schoeffmann,-->
-<!--                    <br/>Omar Shahbaz Khan, Florian Spiess, Lucia Vadicamo, Stefanos Vrochidis-->
-                    <br/>Multimedia Systems, 2023
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/23-MMM.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Reinforcement Learning Enhanced PicHunter for Interactive Search</span>
-                    <br/><b>Zhixin Ma</b>, Jiaxin Wu, Weixiong Loo, Chong-Wah Ngo
-                    <br/>29th International Conference on Multimedia Modeling, 2023
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/22-ACM_Multimedia.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Interactive Video Corpus Moment Retrieval using Reinforcement Learning</span>
-<!--                    [<a href="https://zhixinma.github.io/papers/22-ACM_Multimedia.pdf">pdf</a>]-->
-<!--                    [<a href="https://github.com/zhixinma/iVCMR">code</a>]-->
-<!--                    [<a href="">poster</a>]-->
-                    <br/><b>Zhixin Ma</b>, Chong-Wah Ngo
-                    <br/>ACM MM 2022; <b>Oral</b> & <b><span style="color:blue">Top Rated Paper Award</span>: 13 out of 690 accepted papers (1.88%)</b>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/22-MMM.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Reinforcement Learning-Based Interactive Video Search</span>
-                    <br/><b>Zhixin Ma</b>, Jiaxin Wu, Zhijian Hou, Chong-Wah Ngo
-                    <br/>28th International Conference on Multimedia Modeling, 2022
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/21-MMM.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">SQL-like interpretable interactive video search</span>
-                    <br/>Jiaxin Wu, Phuong Anh Nguyen, <b>Zhixin Ma</b>, Chong-Wah Ngo
-                    <br/>27th International Conference on Multimedia Modeling, 2021
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody>
-            <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/20-EMNLP.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title"in >Re-examining the Role of Schema Linking Text-to-SQL</span>
-                    <br/>Wenqiang Lei, Weixin Wang, <b>Zhixin Ma</b>, Tian Gan, Wei Lu, Min-Yen Kan and Tat-Seng Chua
-                    <br/>EMNLP 2020
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table>
-            <tbody> <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/19-MMAsia.pdf">
-                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Learn to Gesture: Let Your Body Speak</span>
-                    <br/>Tian Gan, <b>Zhixin Ma</b>, Yuxiao Lu, Xuemeng Song and Liqiang Nie
-                    <br/>ACM MMAsia 2019
-                </td>
-            </tr> </tbody>
-        </table>
 
 
-        <h2 style="CLEAR: both">Community Services <a href="" target="_blank"></a></h2><br/>
-        <table>
-            <tbody>
-                <tr> <td>
-<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Multimedia</b>-->
-<!--                    <li>Invited Reviewer for <b>ACM Transactions on the Web</b>-->
-<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Circuits and Systems for Video Technology</b>-->
-                    <li>Invited Reviewer for <b>TMM, TKDE, TCSVT, TWeb, TIST</b>
-                    <li>Invited Reviewer for <b>ACM MM 2023-2024</b>, <b>ACL 2023</b>, <b>EMNLP 2021-2023</b>
-                    <li>Program Committee Member of <b>EMNLP 2023</b>
-                    <li>Volunteer of <b>ACM MM 2022</b>, <b>WWW 2024 (as photographer)</b>
-<!--                    <li>Invited Reviewer for <b>China MM 2020</b>-->
-                </td> </tr>
-            </tbody>
-        </table>
-
-
-        <h2 style="CLEAR: both">Invited Talk <a href="" target="_blank"></a></h2><br/>
+<!--         <h2 style="CLEAR: both">Invited Talk <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
                 <!-- <td class="left"><a target="_blank" href="https://zhixinma.github.io/invited_talk/1_Feb_2023_NExT_NUS.pdf"> -->
@@ -280,9 +162,9 @@
                     <br/>1 Feb. 2023 at NExT Research Centre, NUS
                 </td>
             </tr> </tbody>
-        </table>
+        </table> -->
 
-        <h2 style="CLEAR: both">Teaching Assistants <a href="" target="_blank"></a></h2><br/>
+<!--         <h2 style="CLEAR: both">Teaching Assistants <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
                 <td><span class="title">IS446: Managing Customer Relations with Analytics: Asian Insights</span> <br/>Term 1, AY2023-2024 </td>
@@ -293,7 +175,7 @@
             <tbody> <tr>
                 <td><span class="title">CS601: Introduction to Artificial Intelligence</span> <br/>Term 1, AY2021-2022 </td>
             </tr> </tbody>
-        </table>
+        </table> -->
 
         <h2 style="CLEAR: both">Honors <a href="" target="_blank"></a></h2><br/>
         <table>
@@ -306,7 +188,7 @@
 
 <!--        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=67838b&w=180&t=tt&d=CzFsHyGcEKu0jw0tBfHmROhxIIwb-byYnC7FD-24spA&co=ffffff&ct=777777'></script>-->
         <br>
-        <p style="font-size:15px;font-family:serif;">Last update: Mar. 2024.</p>
+        <p style="font-size:15px;font-family:serif;">Last update: June. 2024.</p>
     </div>
 
 </div>
