--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=7.0000" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Hu Changshuo">
-    <meta name="keywords" content="Hu Changshuo">
-    <title>Hu Changshuo's Homepage</title>
+    <meta name="description" content="Zhixin Ma">
+    <meta name="keywords" content="Zhixin Ma">
+    <title>Zhixin Ma's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./files/style.css">
     <style>@-moz-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-webkit-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-o-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}embed,object{animation-duration:.001s;-ms-animation-duration:.001s;-moz-animation-duration:.001s;-webkit-animation-duration:.001s;-o-animation-duration:.001s;animation-name:nodeInserted;-ms-animation-name:nodeInserted;-moz-animation-name:nodeInserted;-webkit-animation-name:nodeInserted;-o-animation-name:nodeInserted;}</style>
 
@@ -20,19 +20,59 @@
         <h2>News</h2><br>
         <font size="4px">
 
-            <b>May. 2024</b><br/>
+            <b>July. 2023</b><br/>
             <span class="easylink">
-                Our paper "<i>Detecting Foot Strikes during Running with Earbuds</i>" was accepted by <b>BodySys 2024</b>.
+                I was selected as an award winner for the SMU <b>Presidential Doctoral Fellowship </b> and the School of Computing and Information Systems (SCIS) <b>Dean’s List</b>.
             </span><br/><br/>
 
-            <b>Apr. 2024</b><br/>
+            <b>Aug. 2023</b><br/>
             <span class="easylink">
-                Our paper "<i>BreathPro: Monitoring breathing mode during running with earables</i>" was accepted by <b>IMWUT 2024</b>.
+                I passed my Ph.D. dissertation proposal defense.
             </span><br/><br/>
 
-            <b>Jan 2024</b><br/>
+            <b>Jan. 2023</b><br/>
             <span class="easylink">
-                I was admitted into Ph.D. in Computer Science programme as a full-time student commencing in Jan 2024,
+                We won the 3rd price in <a href="https://videobrowsershowdown.org/" target="_blank"> Video Browsing Showdown </a> 2023.
+            </span><br/><br/>
+
+            <b>Dec. 2022</b><br/>
+            <span class="easylink">
+                Our paper "<i>Reinforcement Learning Enhanced PicHunter for Interactive Search</i>" was accepted by <b>MMM 2023</b>.
+            </span><br/><br/>
+
+            <b>Oct. 2022</b><br/>
+            <span class="easylink">
+                Our ACM MM 2022 paper won the <b>Top Rated Paper Award</b>. The reward was given to 13 papers out of 690 accepted submissions (1.88%). The best paper was recommended from this list.
+            </span><br/><br/>
+
+            <b>June 2022</b><br/>
+            <span class="easylink">
+                Our full paper "<i>Interactive Video Corpus Moment Retrieval using Reinforcement Learning</i>" was accepted by <b>ACM Multimedia 2022</b> as an <b>oral</b> paper.
+            </span><br/><br/>
+
+            <b>Nov. 2021</b><br/>
+            <span class="easylink">
+                I passed the Ph.D. qualifying examination and officially became a Ph.D. candidate.
+            </span><br/><br/>
+
+            <b>Oct. 2021</b><br/>
+            <span class="easylink">
+                Our paper "<i>Reinforcement Learning-Based Interactive Video Search</i>" was accepted by <b>MMM 2022</b>.
+            </span><br/><br/>
+
+            <b>June 2021</b><br/>
+            <span class="easylink">
+                We won the third price in <a href="https://videobrowsershowdown.org/" target="_blank"> Video Browsing Showdown </a>, 2021.
+            </span><br/><br/>
+
+            <b>Oct. 2020</b><br/>
+            <span class="easylink">
+                Our paper "<i>SQL-like interpretable interactive video search</i>" was accepted by <b>MMM 2021</b>.
+            </span><br/><br/>
+
+            <b>Mar. 2020</b><br/>
+            <span class="easylink">
+                I was admitted into Ph.D. in Computer Science programme as a full-time student commencing in Aug. 2020,
                 <a href="https://www.smu.edu.sg/" target="_blank"> Singapore Management University </a>.
             </span><br/><br/>
 
@@ -49,7 +89,7 @@
 
                 <td valign="CENTER" align="left" size="+0">
                     <font size="+0">
-                        <b size="+2" style="font-size:25px">Hu Changshuo&nbsp;</b>
+                        <b size="+2" style="font-size:25px">Zhixin Ma&nbsp;</b>
                         <p style="margin-left:0px;">
                         </p>
 
@@ -149,9 +189,127 @@
             </tbody>
         </table>
 
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://link.springer.com/article/10.1007/s00530-023-01143-5">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Interactive Video Retrieval in the Age of Effective Joint Embedding Deep Models</span>
+                    <br/>Jakub Lokoč, Stelios Andreadis, Werner Bailer, ..., <b>Zhixin Ma</b>, ..., Stefanos Vrochidis
+<!--                    <br/>Jakub Lokoč, Stelios Andreadis, Werner Bailer, Aaron Duane, Cathal Gurrin, <b>Zhixin Ma</b>, Nicola Messina,-->
+<!--                    <br/>Thao-Nhu Nguyen, Ladislav Peška, Luca Rossetto, Loris Sauter, Konstantin Schall, Klaus Schoeffmann,-->
+<!--                    <br/>Omar Shahbaz Khan, Florian Spiess, Lucia Vadicamo, Stefanos Vrochidis-->
+                    <br/>Multimedia Systems, 2023
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/23-MMM.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Reinforcement Learning Enhanced PicHunter for Interactive Search</span>
+                    <br/><b>Zhixin Ma</b>, Jiaxin Wu, Weixiong Loo, Chong-Wah Ngo
+                    <br/>29th International Conference on Multimedia Modeling, 2023
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/22-ACM_Multimedia.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Interactive Video Corpus Moment Retrieval using Reinforcement Learning</span>
+<!--                    [<a href="https://zhixinma.github.io/papers/22-ACM_Multimedia.pdf">pdf</a>]-->
+<!--                    [<a href="https://github.com/zhixinma/iVCMR">code</a>]-->
+<!--                    [<a href="">poster</a>]-->
+                    <br/><b>Zhixin Ma</b>, Chong-Wah Ngo
+                    <br/>ACM MM 2022; <b>Oral</b> & <b><span style="color:blue">Top Rated Paper Award</span>: 13 out of 690 accepted papers (1.88%)</b>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/22-MMM.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Reinforcement Learning-Based Interactive Video Search</span>
+                    <br/><b>Zhixin Ma</b>, Jiaxin Wu, Zhijian Hou, Chong-Wah Ngo
+                    <br/>28th International Conference on Multimedia Modeling, 2022
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/21-MMM.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">SQL-like interpretable interactive video search</span>
+                    <br/>Jiaxin Wu, Phuong Anh Nguyen, <b>Zhixin Ma</b>, Chong-Wah Ngo
+                    <br/>27th International Conference on Multimedia Modeling, 2021
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/20-EMNLP.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title"in >Re-examining the Role of Schema Linking Text-to-SQL</span>
+                    <br/>Wenqiang Lei, Weixin Wang, <b>Zhixin Ma</b>, Tian Gan, Wei Lu, Min-Yen Kan and Tat-Seng Chua
+                    <br/>EMNLP 2020
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody> <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/19-MMAsia.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Learn to Gesture: Let Your Body Speak</span>
+                    <br/>Tian Gan, <b>Zhixin Ma</b>, Yuxiao Lu, Xuemeng Song and Liqiang Nie
+                    <br/>ACM MMAsia 2019
+                </td>
+            </tr> </tbody>
+        </table>
 
 
-<!--         <h2 style="CLEAR: both">Invited Talk <a href="" target="_blank"></a></h2><br/>
+        <h2 style="CLEAR: both">Community Services <a href="" target="_blank"></a></h2><br/>
+        <table>
+            <tbody>
+                <tr> <td>
+<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Multimedia</b>-->
+<!--                    <li>Invited Reviewer for <b>ACM Transactions on the Web</b>-->
+<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Circuits and Systems for Video Technology</b>-->
+                    <li>Invited Reviewer for <b>TMM, TKDE, TCSVT, TWeb, TIST</b>
+                    <li>Invited Reviewer for <b>ACM MM 2023-2024</b>, <b>ACL 2023</b>, <b>EMNLP 2021-2023</b>
+                    <li>Program Committee Member of <b>EMNLP 2023</b>
+                    <li>Volunteer of <b>ACM MM 2022</b>, <b>WWW 2024 (as photographer)</b>
+<!--                    <li>Invited Reviewer for <b>China MM 2020</b>-->
+                </td> </tr>
+            </tbody>
+        </table>
+
+
+        <h2 style="CLEAR: both">Invited Talk <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
                 <!-- <td class="left"><a target="_blank" href="https://zhixinma.github.io/invited_talk/1_Feb_2023_NExT_NUS.pdf"> -->
@@ -162,9 +320,9 @@
                     <br/>1 Feb. 2023 at NExT Research Centre, NUS
                 </td>
             </tr> </tbody>
-        </table> -->
+        </table>
 
-<!--         <h2 style="CLEAR: both">Teaching Assistants <a href="" target="_blank"></a></h2><br/>
+        <h2 style="CLEAR: both">Teaching Assistants <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
                 <td><span class="title">IS446: Managing Customer Relations with Analytics: Asian Insights</span> <br/>Term 1, AY2023-2024 </td>
@@ -175,12 +333,27 @@
             <tbody> <tr>
                 <td><span class="title">CS601: Introduction to Artificial Intelligence</span> <br/>Term 1, AY2021-2022 </td>
             </tr> </tbody>
-        </table> -->
+        </table>
 
         <h2 style="CLEAR: both">Honors <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
-                <td><span class="title">PhD Full Scholarship, Ministry of Education, Singapore </span>, 2023 </td>
+                <td><span class="title">SMU Presidential Doctoral Fellowship </span>, AY2023 </td>
+            </tr> </tbody>
+            <tbody> <tr>
+                <td><span class="title">Dean’s List of School of Computing and Information Systems (SCIS)</span>, AY2023</td>
+            </tr> </tbody>
+            <tbody> <tr>
+                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2023</td>
+            </tr> </tbody>
+            <tbody> <tr>
+                <td><span class="title">ACM Multimedia Top Rated Paper Award</span>, AY2022</td>
+            </tr> </tbody>
+            <tbody> <tr>
+                <td><span class="title">ACM Multimedia Student Travel Grant</span>, AY2022</td>
+            </tr> </tbody>
+            <tbody> <tr>
+                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2021</td>
             </tr> </tbody>
 
 
@@ -188,7 +361,7 @@
 
 <!--        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=67838b&w=180&t=tt&d=CzFsHyGcEKu0jw0tBfHmROhxIIwb-byYnC7FD-24spA&co=ffffff&ct=777777'></script>-->
         <br>
-        <p style="font-size:15px;font-family:serif;">Last update: June. 2024.</p>
+        <p style="font-size:15px;font-family:serif;">Last update: Mar. 2024.</p>
     </div>
 
 </div>
