--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=7.0000" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Zhixin Ma">
-    <meta name="keywords" content="Zhixin Ma">
-    <title>Zhixin Ma's Homepage</title>
+    <meta name="description" content="Hu Changshuo">
+    <meta name="keywords" content="Hu Changshuo">
+    <title>Hu Changshuo's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./files/style.css">
     <style>@-moz-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-webkit-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-o-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}embed,object{animation-duration:.001s;-ms-animation-duration:.001s;-moz-animation-duration:.001s;-webkit-animation-duration:.001s;-o-animation-duration:.001s;animation-name:nodeInserted;-ms-animation-name:nodeInserted;-moz-animation-name:nodeInserted;-webkit-animation-name:nodeInserted;-o-animation-name:nodeInserted;}</style>
 
@@ -20,59 +20,19 @@
         <h2>News</h2><br>
         <font size="4px">
 
-            <b>July. 2023</b><br/>
+            <b>May. 2024</b><br/>
             <span class="easylink">
-                I was selected as an award winner for the SMU <b>Presidential Doctoral Fellowship </b> and the School of Computing and Information Systems (SCIS) <b>Dean’s List</b>.
+                Our paper "<i>Detecting Foot Strikes during Running with Earbuds</i>" was accepted by <b>BodySys 2024</b>.
             </span><br/><br/>
 
-            <b>Aug. 2023</b><br/>
+            <b>Apr. 2024</b><br/>
             <span class="easylink">
-                I passed my Ph.D. dissertation proposal defense.
+                Our paper "<i>BreathPro: Monitoring breathing mode during running with earables</i>" was accepted by <b>IMWUT 2024</b>.
             </span><br/><br/>
 
-            <b>Jan. 2023</b><br/>
+            <b>Jan 2024</b><br/>
             <span class="easylink">
-                We won the 3rd price in <a href="https://videobrowsershowdown.org/" target="_blank"> Video Browsing Showdown </a> 2023.
-            </span><br/><br/>
-
-            <b>Dec. 2022</b><br/>
-            <span class="easylink">
-                Our paper "<i>Reinforcement Learning Enhanced PicHunter for Interactive Search</i>" was accepted by <b>MMM 2023</b>.
-            </span><br/><br/>
-
-            <b>Oct. 2022</b><br/>
-            <span class="easylink">
-                Our ACM MM 2022 paper won the <b>Top Rated Paper Award</b>. The reward was given to 13 papers out of 690 accepted submissions (1.88%). The best paper was recommended from this list.
-            </span><br/><br/>
-
-            <b>June 2022</b><br/>
-            <span class="easylink">
-                Our full paper "<i>Interactive Video Corpus Moment Retrieval using Reinforcement Learning</i>" was accepted by <b>ACM Multimedia 2022</b> as an <b>oral</b> paper.
-            </span><br/><br/>
-
-            <b>Nov. 2021</b><br/>
-            <span class="easylink">
-                I passed the Ph.D. qualifying examination and officially became a Ph.D. candidate.
-            </span><br/><br/>
-
-            <b>Oct. 2021</b><br/>
-            <span class="easylink">
-                Our paper "<i>Reinforcement Learning-Based Interactive Video Search</i>" was accepted by <b>MMM 2022</b>.
-            </span><br/><br/>
-
-            <b>June 2021</b><br/>
-            <span class="easylink">
-                We won the third price in <a href="https://videobrowsershowdown.org/" target="_blank"> Video Browsing Showdown </a>, 2021.
-            </span><br/><br/>
-
-            <b>Oct. 2020</b><br/>
-            <span class="easylink">
-                Our paper "<i>SQL-like interpretable interactive video search</i>" was accepted by <b>MMM 2021</b>.
-            </span><br/><br/>
-
-            <b>Mar. 2020</b><br/>
-            <span class="easylink">
-                I was admitted into Ph.D. in Computer Science programme as a full-time student commencing in Aug. 2020,
+                I was admitted into Ph.D. in Computer Science programme as a full-time student commencing in Jan 2024,
                 <a href="https://www.smu.edu.sg/" target="_blank"> Singapore Management University </a>.
             </span><br/><br/>
 
