--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <td valign="CENTER" align="left" size="+0">
                     <font size="+0">
-                        <b size="+2" style="font-size:25px">Zhixin Ma&nbsp;</b>
+                        <b size="+2" style="font-size:25px">Hu Changshuo&nbsp;</b>
                         <p style="margin-left:0px;">
                         </p>
 
@@ -79,9 +79,11 @@
 
         <h2>About Me</h2> <br/>
         <p id="profile" style="margin-left:0px;">
-			Hu Changshuo is currently a Ph.D. student in Computer Science at Singapore Management University, under the supervision of Professor
-			 <a href="https://www.dongma.info/" target="_blank">Ma Dong</a>. His research interests encompass mobile computing and pervasive 
-			 sensing, with a particular focus on authentication, running monitoring, and interaction using earables.
+			Hu Changshuo is currently a Ph.D. student in Computer Science at Singapore Management University, under the supervision of Professor <a href="https://www.smu.edu.sg/faculty/profile/167731" target="_blank"></a> Ma Dong. His research interests encompass mobile computing and pervasive sensing, with a particular focus on authentication, running monitoring, and interaction using earables.
+            Zhixin is now a Ph.D. student supervised by Prof. <a href="https://www.smu.edu.sg/faculty/profile/167731" target="_blank">Ngo Chong-Wah</a>, in Computer Science, Singapore Management
+            University.
+            His general research interests lie in the field of multimedia computing and human-in-the-loop interactive system. Now, he mainly focuses on interactive video retrieval, user simulation,
+            and also, the amazing LLMs in the interactive retrieval scenario.
         </p>
 
         <h2 style="CLEAR: both;">Education</h2>
