--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2>About Me</h2> <br/>
         <p id="profile" style="margin-left:0px;">
 			Hu Changshuo is currently a Ph.D. student in Computer Science at Singapore Management University, under the supervision of 
-			Professor <a href="https://www.smu.edu.sg/faculty/profile/167731" target="_blank">Ma Dong</a>. His research interests 
+			Professor <a href="https://www.dongma.info/" target="_blank">Ma Dong</a>. His research interests 
 			encompass mobile computing and pervasive sensing, with a particular focus on authentication, running monitoring, and 
 			interaction using earables.
         </p>
@@ -89,19 +89,26 @@
         <table>
             <tr>
                 <td><span class="title">Singapore Management University </span> <br/>
-                    Ph.D. student in Computer Science &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Aug. 2020 - Now, Singapore <br/>
-                    Advisor: Prof. <a href="https://www.smu.edu.sg/faculty/profile/167731" target="_blank">Chong-Wah Ngo</a>
+                    Ph.D. student in Computer Science &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Jan. 2024 - Now, Singapore <br/>
+                    Advisor: Prof. <a href="https://www.dongma.info/" target="_blank">Ma Dong</a>
                 </td>
             </tr>
-<!--            </tbody>-->
         </table>
         <table>
             <tbody>
             <tr>
-                <td><span class="title">Shandong University </span> <br/>
-                    Bachelor in Computer Science and Technology &emsp; Sept. 2015 - June 2019, Jinan & Qingdao, China<br>
-                    Advisor: <a href="https://gantian.github.io/" target="_blank">Prof. Tian Gan</a> and
-                    <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+                <td><span class="title">University of New South Wales </span> <br/>
+                    Master in Information System &emsp; Jan. 2018 - Jan 2020, Sydney, Australia<br>
+                    Advisor: <a href="https://www.cse.unsw.edu.au/~mahbub/" target="_blank">Mahbub Hassan</a>
+                </td>
+            </tr>
+        </table>
+
+		<table>
+            <tbody>
+            <tr>
+                <td><span class="title">Capital Normal University </span> <br/>
+                    Bachelor in Computer Science and Technology &emsp; Sept. 2012 - June 2016, Beijing, China<br>
                 </td>
             </tr>
         </table>
