--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
                             80 Stamford Road, Singapore 178902<br/>
                         </p>
                         <p style="margin-left:0px;">
-                            zhixinma97 AT gmail DOT com</a><br/>
+                            laserhu16 AT gmail DOT com</a><br/>
 <!--                            <a href="files/CV_MaZhixin.pdf">CV</a> &bull;-->
-                            <a href="https://scholar.google.com/citations?user=dkncXPsAAAAJ&hl=en" target="_blank">Google Scholar</a> ⋅
-                            <a href="https://github.com/zhixinma" target="_blank">GitHub</a> ⋅
-                            <a href="https://www.instagram.com/iama.zhixin" target="_blank">Ins</a> <br/>
+                            <a href="https://scholar.google.com/citations?user=Hp_wzA0AAAAJ&hl=en" target="_blank">Google Scholar</a> ⋅
+                            <a href="https://github.com/LaserHu" target="_blank">GitHub</a> ⋅
                         </p>
                     </font>
                 </td>
