--- a/index.html
+++ b/index.html
@@ -144,16 +144,33 @@
         <table>
             <tbody>
             <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/24-MMM.pdf">
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/BodySys'24.pdf">
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
-                <td><span class="title">Leveraging LLMs and Generative Models for Interactive Known-Item Video Search</span>
-                    <br/><b>Zhixin Ma</b>, Jiaxin Wu, Chong-Wah Ngo
-                    <br/>30th International Conference on Multimedia Modeling, 2024
+                <td><span class="title">Detecting Foot Strikes during Running with Earbuds</span>
+                    <br/><b>Changshuo Hu</b>, Thivya Kandappu, Jake Stuchbury-Wass, Yang Liu, Anthony Tang, Cecilia Mascolo, Dong Ma
+
+                    <br/>10th Workshop on Body-Centric Computing Systems, Co-located with ACM MobiSys 2024
                 </td>
             </tr>
             </tbody>
         </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/BodySys'24.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Detecting Foot Strikes during Running with Earbuds</span>
+                    <br/><b>Changshuo Hu</b>, Thivya Kandappu, Jake Stuchbury-Wass, Yang Liu, Anthony Tang, Cecilia Mascolo, Dong Ma
+
+                    <br/>10th Workshop on Body-Centric Computing Systems, Co-located with ACM MobiSys 2024
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
 
         
 
